tests/src/frontend/expand/invalid/macro_undefined.sk
class C() {
  macro fun m(): void {
    #undefined
  }
}

fun main(): void {
  void
}
